# Kill_LIFE

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DISCLAIMER.md  Dockerfile  EASTER_EGGS.md  INSTALL.md  LICENSE  LICENSE.md  Makefile  README.md  README_FR.md  RELEASE.md  RUNBOOK.md  SYNTHESE_AGENTIQUE.md  TUTO4NOOB.md  coverage_badge.py  docker-compose.yml  endpoints.md  esp32_minimal-erc.rpt  install_kill_life.sh  install_kill_life_full.sh  mcp.json  mkdocs.yml  pyproject.toml  requirements-mistral.txt  setup_python_secure.sh
.claude/: settings.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
KIKIFOU/: diagramme.md  mapping.md  patterns.md  recommandations.md  synthese.md  technique.md
agents/: arch_mesh.md  architect_agent.md  doc_agent.md  docs_research.md  embedded_cad.md  firmware.md  firmware_agent.md  hw_schematic_agent.md  kill_life_bridge.md  pm_agent.md  pm_mesh.md  qa_agent.md  qa_compliance.md  runtime_companion.md  schema_guard.md  sync_ops.md  ux_lead.md  web_cad_platform.md
ai-agentic-embedded-base/: .editorconfig  .gitignore  Makefile  README.md  README_FR.md  mkdocs.yml
bmad/: README.md  README_FR.md
cloud-init/: meta-data  user-data
compliance/: plan.yaml
datasets/: kb_components_qa.jsonl  kb_firmware_qa.jsonl  kb_kicad_qa.jsonl  kb_spice_qa.jsonl
docs/: AGENTIC_DIAGRAM.md  AGENTIC_INTELLIGENCE_FEATURE_MAP_2026-03-21.md  AGENTIC_INTELLIGENCE_FEATURE_MAP_2026-03-22.md  AGENTIC_LANDSCAPE.md  AGENT_MODULE_ASSIGNMENTS_2026-03-20.md  AGENT_SPEC_MODULE_MATRIX_2026-03-20.md  DOC.md  (+113 more)
(+989 files in other folders)
